--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <div class="hero">
     <div class="calculator">
         <h1>Lifespan Estimator</h1>
-        <input type="number" id="age" placeholder="Age" min="0">
-        <input type="number" id="weight" placeholder="Body Weight in kg" min="0">
+        <input type="number" id="age" placeholder="Age" min="0" max="150">
+        <input type="number" id="weight" placeholder="Body Weight in kg" min="0" max="300">
         <button onclick="calculateLifespan()">Calculate Lifespan</button>
         <div class="result" id="result"></div>
     </div>
